[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fixr"
version = "0.1.0"
description = "AI-powered CLI that explains programming errors using a persistent cache and LLMs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
fxr = "fixr.main:cli"
fixr = "fixr.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/fixr"
